--- a/index.html
+++ b/index.html
@@ -19,32 +19,23 @@
       <div class="product-list">
         <div class="list">
           <span class="icon"><img src="./assets/images/icon-list.svg" alt=""></span>
-          <span class="product">
-            <p> Product discovery and building what matters
-            </p>
-          </span>
+          <span class="product">Product discovery and building what matters</span>
         </div>
         <div class="list">
           <span class="icon"><img src="./assets/images/icon-list.svg" alt=""></span>
-          <span class="product">
-            <p> Measuring to ensure updates are a success
-            </p>
-          </span>
+          <span class="product">Measuring to ensure updates are a success</span>
         </div>
         <div class="list">
           <span class="icon"><img src="./assets/images/icon-list.svg" alt=""></span>
-          <span class="product">
-            <p> And much more!
-            </p>
-          </span>
+          <span class="product">And much more!</span>
         </div>
       </div>
-      <form id="myForm" class="email-box">
+      <form id="myForm" class="email-box" novalidate>
         <div class="label-row">
           <label for="email">Email address</label>
           <span aria-live="polite" id="email-error"></span>
         </div>
-        <input id="email" name="email" placeholder="email@company.com" />
+        <input id="email" name="email" type="email" placeholder="email@company.com" />
         <button type="submit" id="submitBtn">Subscribe to monthly newsletter</button>
       </form>
     </div>
